styles/temples.css
/* ADD HAMBURGER MENU */

:root {
    font-family: Roboto, Arial, sans-serif;
    --primary-color: #789c66;
    --accent-color: #c0d9b4;
    --dark-color: #000000;
    color: var(--dark-color);
    font-size: 18px;
}

header {
    background-color: var(--primary-color);
    font-size: 30px;
    
}

header p {
    padding: 20px;
    margin: 0;
}

main {
    max-width: 500px;
    margin: 0 auto;
    display: grid;
    grid-template-columns: 1fr;
    align-items: center;
    justify-items: center;
}

nav a {
    font-size: 18px;
    background-color: var(--accent-color);
    border: 3px solid var(--accent-color);
    padding: 10px;
    display: flex;
}

nav a:link {
    text-decoration: none;
    color: var(--dark-color);
}

nav a:visited {
    color: var(--dark-color);
    text-decoration: none;
}

nav a:hover {
    background-color: var(--primary-color);
    border: 3px solid var(--primary-color);
}

h1 {
    grid-column: 1 / -1;
    text-align: center;
    font-size: 30px;
}

footer {
    background-color: var(--primary-color);
    text-align: center;
    padding: 5px;
    font-size: 18px;
}

figcaption {
    text-align: center;
}

figure img {
    max-width: 100%;
}

